# agent-trail

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/agent_trail/: __init__.py  cli.py  git_tools.py  render.py  store.py
tests/: test_git_tools.py  test_render.py  test_store.py
